compoze Changelog

  After compoze 0.2

    - Added 'show' command, which displays locations for one or more
      requirements across a set of indexes.

  compoze 0.2 (2007-11-19)

    - Added '--help-commands' option to show subcommands.

    - Broke 'fetch' and 'index' out as subcommands;  other commands can
      be registered using the pkg_resources entry point group,
      'compoze_commands'.

  compoze 0.1 (2007-11-14)

    - Initial alpha release.