@@ -2,6 +2,9 @@ compoze Changelog
 
   After compoze 0.2
 
+    - Added 'pool' command which moves all archives in the currently directory
+      to a common pool directory and symlinks them back
+
     - Added 'show' command, which displays locations for one or more
       requirements across a set of indexes.
 
